--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,7 @@
 <div>
   <div class="row">
-    <div class="col-10">
-      <input class="form-control" type="text" [(ngModel)]="service.name" (change)="service.findCharacter()" placeholder="Character name"
+    <div class="col-9">
+      <input class="form-control" type="text" [(ngModel)]="service.name" (change)="service.findCharacter()" placeholder="Search Character name"
         *ngIf="service.showSearchList">
       <div>
         <div class="list-group" *ngFor="let x of service.charactersList">
@@ -9,7 +9,7 @@
         </div>
       </div>
     </div>
-    <div class="col-2">
-      <button class="btn btn-success float-right" (click)="service.newCharacter()">Add New</button>
+    <div class="col-3">
+      <button class="btn btn-success float-right" (click)="service.newCharacter()">Add</button>
     </div>
   </div>
