--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,9 @@
     </div>
     <div class="col"></div>
   </div>
+  <div class="row">
+    <div class="col">
+      <app-footer></app-footer>
+    </div>
+  </div>
 </div>
