--- a/src/app/create-edit/create-edit.component.html
+++ b/src/app/create-edit/create-edit.component.html
@@ -2,11 +2,11 @@
   <h2 *ngIf="service.isNew">New Character</h2>
   <h2 *ngIf="!service.isNew">Edit Character</h2>
   <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="fname">*Please provide a First Name</small>
       <input required type="text" placeholder="First Name" class="form-control" id="firstName" [(ngModel)]="service.formBinding.firstName">
     </div>
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="lname">Please provide a Last Name</small>
       <input type="text" placeholder="Last name" class="form-control" id="lastName" [(ngModel)]="service.formBinding.lastName">
     </div>
@@ -20,7 +20,7 @@
   </div>
 
   <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="gender">*Please select a Gender</small>
       <select name="gender" class="form-control" id="gender" [(ngModel)]="service.formBinding.gender">
         <option value="Gender" disabled selected hidden>Gender</option>
@@ -28,11 +28,11 @@
         <option value="Female">Female</option>
       </select>
     </div>
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="origin">*Please input a Origin</small>
       <input type="text" placeholder="Origin" class="form-control" id="origin" [(ngModel)]="service.formBinding.origin">
     </div>
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="family">*Please select a Family</small>
       <select name="family" class="form-control" id="family" [(ngModel)]="service.formBinding.family">
         <option value="Family" disabled selected hidden>Family</option>
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="status">*Please select a Status</small>
       <select name="status" class="form-control" id="status" [(ngModel)]="service.formBinding.status">
         <option value="Status" disabled selected hidden>Status</option>
@@ -73,7 +73,7 @@
         <option value="Deceased">Deceased</option>
       </select>
     </div>
-    <div class="col">
+    <div class="col-sm-12 col-md-6">
       <small class="hidden" id="age">Age</small>
       <input type="number" min="1" placeholder="Age" class="form-control" id="age" [(ngModel)]="service.formBinding.age">
     </div>
