--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -10,6 +10,6 @@
       </div>
     </div>
     <div class="col-3">
-      <button class="btn btn-success float-right" (click)="service.newCharacter()">Add</button>
+      <button class="btn btn-success float-right" (click)="service.newCharacter()">New</button>
     </div>
   </div>
