--- a/src/styles.css
+++ b/src/styles.css
@@ -3,4 +3,5 @@
 body {
   background: url(./assets/img/background.jpg) no-repeat center center fixed;
   background-size: cover;
+  min-height: 100vh;
 }
