updating mobile layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,11 @@
     <div class="col"></div>
   </div>
   <div class="row">
-    <div class="col">
-      <app-footer></app-footer>
+    <div class="col" style="height: 5rem">
+    </div>
+    <div class="row">
+      <div class="col">
+        <app-footer></app-footer>
+      </div>
     </div>
   </div>
-</div>
