--- a/src/app/create-edit/create-edit.component.css
+++ b/src/app/create-edit/create-edit.component.css
@@ -16,6 +16,23 @@ small {
   color: #dc3545;
 }
 
-.list-group-item:last-child {
-  margin-bottom: 4rem;
+.list-group-item {
+  background-color: #10181c80;
+}
+
+h2 {
+  color: white;
+}
+
+.form-control {
+  color: #6c757c;
+}
+
+@media only screen and (max-width: 768px) {
+  h2 {
+    font-size: 17pt;
+  }
+  .form-control {
+    font-size: 10pt;
+  }
 }
