--- a/src/app/create-edit/create-edit.component.html
+++ b/src/app/create-edit/create-edit.component.html
@@ -1,6 +1,6 @@
 <div class="list-group-item">
-  <h2 *ngIf="service.isNew">New Character</h2>
-  <h2 *ngIf="!service.isNew">Edit Character</h2>
+  <h2 *ngIf="service.isNew" class="text-center">New Character</h2>
+  <h2 *ngIf="!service.isNew" class="text-center">Edit Character</h2>
   <div class="row">
     <div class="col-sm-12 col-md-6">
       <small class="hidden" id="fname">*Please provide a First Name</small>
