--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -10,3 +10,9 @@ footer div {
 footer div a {
   color: #ad8657;
 }
+
+@media only screen and (max-width: 768px) {
+  footer {
+    display: none;
+  }
+}
