--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,10 +10,10 @@
     </div>
     <div class="col"></div>
   </div>
-  <!-- <div class="row">
+  <div class="row">
     <div class="col" style="height: 5rem">
     </div>
-  </div> -->
+  </div>
   <div class="row">
     <div class="col">
       <app-footer></app-footer>
