--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-  background: url(./assets/img/background.jpg) no-repeat center center fixed;
+  background: url(./assets/img/background.jpg) center fixed;
   background-size: cover;
   min-height: 100vh;
+  /* background-image: url('./assets/img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh; */
 }
